src/components/Radio/RadioGroup.css
.container {
	display: block;
	position: relative;
	margin: 10px auto;
	height: auto;
	padding: 20px;
}

h2 {
	color: #aaaaaa;
}

.container ul {
	list-style: none;
	margin: 0;
	padding: 0;
	overflow: auto;
}

ul li {
	color: #aaaaaa;
	display: block;
	position: relative;
	float: left;
	width: 100%;
	height: 100px;
	border-bottom: 1px solid #333;
}

ul li input[type="radio"] {
	position: absolute;
	visibility: hidden;
}

ul li label {
	display: block;
	position: relative;
	font-weight: 300;
	padding: 25px 25px 25px 70px;
	margin: 10px auto;
	height: 20px;
	z-index: 9;
	cursor: pointer;
	-webkit-transition: all 0.25s linear;
}

ul li:hover label {
	color: #ffffff;
}

ul li .check {
	display: block;
	position: absolute;
	border: 5px solid #aaaaaa;
	border-radius: 100%;
	height: 15px;
	width: 15px;
	top: 30px;
	left: 20px;
	z-index: 5;
	transition: border 0.25s linear;
	-webkit-transition: border 0.25s linear;
}

ul li:hover .check {
	border: 5px solid #ffffff;
}

ul li .check::before {
	display: block;
	position: absolute;
	content: "";
	border-radius: 100%;
	height: 10px;
	width: 10px;
	top: 3px;
	left: 2px;
	margin: auto;
	transition: background 0.25s linear;
	-webkit-transition: background 0.25s linear;
}

